5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3512/executions/1756_1576.log
== TEST (2019-05-28 22:33:15) 
-- CODE:
from numpy import 

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa ")))

cont=0
cont2= 0

pedra= 11
papel=22
tesoura= 33


while(cont < size(vetor1)):
	if (vetor1[cont]== papel and vetor2[cont]== pedra):
		cont1= cont1 + 1
	elif(vetor1[cont]== pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont]== tesoura and vetor2[cont]== papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1

print(size(vetor1))
-- ERROR:
File "XXXX", line 1
    from numpy import 
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:33:23) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa ")))

cont=0
cont2= 0

pedra= 11
papel=22
tesoura= 33


while(cont < size(vetor1)):
	if (vetor1[cont]== papel and vetor2[cont]== pedra):
		cont1= cont1 + 1
	elif(vetor1[cont]== pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont]== tesoura and vetor2[cont]== papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1

print(size(vetor1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:33:24) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa ")))

cont=0
cont2= 0

pedra= 11
papel=22
tesoura= 33


while(cont < size(vetor1)):
	if (vetor1[cont]== papel and vetor2[cont]== pedra):
		cont1= cont1 + 1
	elif(vetor1[cont]== pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont]== tesoura and vetor2[cont]== papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1

print(size(vetor1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:33:33) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa ")))

cont=0
cont2= 0

pedra= 11
papel=22
tesoura= 33


while(cont < size(vetor1)):
	if (vetor1[cont]== papel and vetor2[cont]== pedra):
		cont1= cont1 + 1
	elif(vetor1[cont]== pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont]== tesoura and vetor2[cont]== papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1

print(size(vetor1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:34:33) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa ")))

cont=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont]== papel and vetor2[cont]== pedra):
		cont1= cont1 + 1
	elif(vetor1[cont]== pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont]== tesoura and vetor2[cont]== papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1

print(size(vetor1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:37:29) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa ")))

cont=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont]== tesoura and vetor2[cont]== papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	cont= cont + 1

print(size(vetor1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:37:33) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa ")))

cont=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont]== tesoura and vetor2[cont]== papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	cont= cont + 1

print(size(vetor1))
-- EXECUTION TIME:
3.57546
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 20, in <module>
    cont1= cont1 + 1
NameError: name 'cont1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:37:37) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa ")))

cont=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont]== tesoura and vetor2[cont]== papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	cont= cont + 1

print(size(vetor1))
-- EXECUTION TIME:
4.40823
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 20, in <module>
    cont1= cont1 + 1
NameError: name 'cont1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:37:40) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa ")))

cont=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont]== tesoura and vetor2[cont]== papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	cont= cont + 1

print(size(vetor1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:37:46) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa ")))

cont=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont]== tesoura and vetor2[cont]== papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	cont= cont + 1

print(size(vetor1))
-- EXECUTION TIME:
2.57351
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 20, in <module>
    cont1= cont1 + 1
NameError: name 'cont1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:38:16) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa ")))

cont=0
cont=1
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont]== tesoura and vetor2[cont]== papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	cont= cont + 1

print(size(vetor1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:38:24) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa ")))

cont=0
cont=1
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont]== tesoura and vetor2[cont]== papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	cont= cont + 1

print(size(vetor1))
-- EXECUTION TIME:
2.11442
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 21, in <module>
    cont1= cont1 + 1
NameError: name 'cont1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:38:40) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa ")))

cont=0
cont1=1
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont]== tesoura and vetor2[cont]== papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	cont= cont + 1

print(size(vetor1))
-- EXECUTION TIME:
2.30858
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:39:11) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa ")))

cont=0
cont1=1
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont]== tesoura and vetor2[cont]== papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	cont= cont + 1

print(size(vetor1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:39:31) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa: ")))

cont=0
cont1=1
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont]== tesoura and vetor2[cont]== papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	cont= cont + 1

print(size(vetor1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:39:37) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa: ")))

cont=0
cont1=1
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont]== tesoura and vetor2[cont]== papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	cont= cont + 1

print(size(vetor1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:40:05) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa: ")))

cont=0
cont1=1
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont]== tesoura and vetor2[cont]== papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	cont= cont + 1

print(size(vetor1))
-- EXECUTION TIME:
2.35038
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:42:06) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa: ")))

cont=0
cont1=1
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont]== tesoura and vetor2[cont]== papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	cont= cont + 1

print(size(vetor1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:46:26) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa: ")))

cont=0
cont1=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont]== tesoura and vetor2[cont]== papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	cont= cont + 1

print(size(vetor1))
-- EXECUTION TIME:
2.3083
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
elemetary eusapia: elemetary barsa: 10
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
elemetary eusapia: elemetary barsa: 18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:50:33) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa: ")))

cont=0
cont1=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont] == tesoura and vetor2[cont] == papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	cont = cont + 1

print(size(vetor1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 23:00:01) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa ")))

cont=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont]== tesoura and vetor2[cont]== papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont= cont + 1

print(size(vetor1))
-- EXECUTION TIME:
2.21834
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 20, in <module>
    cont1= cont1 + 1
NameError: name 'cont1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:00:02) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa: ")))

cont=0
cont1=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont] == tesoura and vetor2[cont] == papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
		cont = cont + 1

print(size(vetor1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:00:02) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa: ")))

cont=0
cont1=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont] == tesoura and vetor2[cont] == papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
		cont = cont + 1

print(size(vetor1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:00:02) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa: ")))

cont=0
cont1=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont] == tesoura and vetor2[cont] == papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
		cont = cont + 1

print(size(vetor1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:00:02) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa: ")))

cont=0
cont1=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont] == tesoura and vetor2[cont] == papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
		cont = cont + 1

print(size(vetor1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:00:20) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa: ")))

cont=0
cont1=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont] == tesoura and vetor2[cont] == papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	cont = cont + 1

print(size(vetor1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 23:00:34) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa: ")))

cont=0
cont1=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont] == tesoura and vetor2[cont] == papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	cont = cont + 1

print(size(vetor1))
-- EXECUTION TIME:
3.62439
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
12
EMPATE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:00:36) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa: ")))

cont=0
cont1=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont] == tesoura and vetor2[cont] == papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	cont = cont + 1
	
print(size(vetor1))
print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 23:00:45) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa: ")))

cont=0
cont1=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont] == tesoura and vetor2[cont] == papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	cont = cont + 1
	
print(size(vetor1))
print("EMPATE")
-- EXECUTION TIME:
4.96098
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
elemetary eusapia: elemetary barsa: 10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
elemetary eusapia: elemetary barsa: 18
EMPATE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:00:46) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa: ")))

cont=0
cont1=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont] == tesoura and vetor2[cont] == papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	cont = cont + 1
	
print(size(vetor1))
print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:00:54) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa: ")))

cont=0
cont1=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont] == tesoura and vetor2[cont] == papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	cont = cont + 1
	
print(size(vetor1))
print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 23:01:34) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa: ")))

cont=0
cont1=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont] == tesoura and vetor2[cont] == papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	cont = cont + 1
	
print(size(vetor1))
print("EMPATE")
-- EXECUTION TIME:
6.91421
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
elemetary eusapia: elemetary barsa: 18
EMPATE
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:02:04) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa: ")))

cont=0
cont1=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont] == tesoura and vetor2[cont] == papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	elif(vetor1[cont] = vetor2[cont]):
		print("EMPATE")
	cont = cont + 1
	
print(size(vetor1))
print("EMPATE")
-- ERROR:
File "XXXX", line 24
    elif(vetor1[cont] = vetor2[cont]):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:02:44) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa: ")))

cont=0
cont1=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont] == tesoura and vetor2[cont] == papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	elif(vetor1[cont] = vetor2[cont]):
		cont= cont + 0 
	cont = cont + 1
	
print(size(vetor1))
print("EMPATE")
-- ERROR:
File "XXXX", line 24
    elif(vetor1[cont] = vetor2[cont]):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:03:10) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa: ")))

cont=0
cont1=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont] == tesoura and vetor2[cont] == papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	elif(vetor1[cont] == vetor2[cont]):
		cont= cont + 0 
	cont = cont + 1
	
print(size(vetor1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:06:16) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa: ")))

cont=0
cont1=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == pedra and vetor2[cont] == papel):
		cont1 = cont1 + 1
	elif(vetor1[cont] == papel and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont] == tesoura and vetor2[cont] == pedra):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
	cont = cont + 1
	
print(size(vetor1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 23:08:17) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa ")))

cont=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont]== papel and vetor2[cont]== pedra):
		cont1= cont1 + 1
	elif(vetor1[cont]== pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont]== tesoura and vetor2[cont]== papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1

print(size(vetor1))
-- EXECUTION TIME:
2.22071
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 20, in <module>
    cont1= cont1 + 1
NameError: name 'cont1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 23:08:17) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa ")))

cont=0
cont2= 0

pedra= 11
papel=22
tesoura= 33


while(cont < size(vetor1)):
	if (vetor1[cont]== papel and vetor2[cont]== pedra):
		cont1= cont1 + 1
	elif(vetor1[cont]== pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont]== tesoura and vetor2[cont]== papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1

print(size(vetor1))
-- EXECUTION TIME:
0.340133
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1576/main.py", line 20, in <module>
    cont1= cont1 + 1
NameError: name 'cont1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 23:08:17) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa: ")))

cont=0
cont1=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont] == tesoura and vetor2[cont] == papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
		cont = cont + 1

print(size(vetor1))
-- EXECUTION TIME:
1039.3
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: container_linux.go:289: creating new parent process caused "container_linux.go:1657: running lstat on namespace path \"/proc/161151/ns/ipc\" caused \"lstat /proc/161151/ns/ipc: no such file or directory\"": unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 23:08:18) 
-- CODE:
from numpy import*

vetor1= array(eval(input("elemetary eusapia: "))) #iram ser corrspodntes das cont 1 e 2 
vetor2= array(eval(input("elemetary barsa: ")))

cont=0
cont1=0
cont2= 0

pedra= 11
papel=22
tesoura=33


while(cont < size(vetor1)):
	if (vetor1[cont] == papel and vetor2[cont] == pedra):
		cont1 = cont1 + 1
	elif(vetor1[cont] == pedra and vetor2[cont]== tesoura):
		cont1= cont1 + 1
	elif (vetor1[cont] == tesoura and vetor2[cont] == papel):
		cont1= cont1 + 1
	elif(vetor1[cont] != vetor2[cont]):
		cont2= cont2 + 1
		cont = cont + 1

print(size(vetor1))
-- EXECUTION TIME:
1036.67
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
